# photobooth

./: .dockerignore  .gitignore  LICENSE  README.md  background.py  db_connection.py  docker-compose-dev.yml  docker-compose.yml  dockerfile  dockerfile-setup  file_server.py  frame.py  gallery.py  img.py  img_processing.py  img_to_base64.py  main.py  makefile  mongodb_manager.py  printer.py  process_img.py  requirements-setup.txt  requirements.txt  session.py  setup.py  setup.sh  test.py  user.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  server.js
frontend/public/: gallery.html  index.html  script.js
frontend/public/assets/scripts/: gallery.js  script.js
frontend/public/assets/styles/: style.css
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: AdminDashboard.tsx  AdminLogin.tsx  AuthenticatedImage.tsx  AutoLogin.tsx  BackgroundImage.tsx  BackgroundSlider.tsx  CameraPreview.tsx  Countdown.tsx  CustomCameraComponent.tsx  DisclaimerModal.tsx  FlashAnimation.tsx  GalleryPage.tsx  GalleryThumbnail.tsx  PinModal.tsx  PrintCountModal.tsx  ShareAllButton.tsx
frontend/src/pages/: AdminPage.tsx  DatenschutzPage.tsx  DetailPage.tsx  PhotoBoxPage.tsx  PhotoboothPage.tsx  SessionDetailPage.tsx
img_server/: README.md  docker-compose.yml  pyproject.toml
img_server/src/img_server/: main.py  role.py  session.py  user.py
print-service/: .env.template  print-service.py  requirements.txt
