[project]
name = "img-server"
version = "0.1.0"
description = ""
authors = [
    {name = "JulianKropp",email = "62835694+JulianKropp@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "redis (>=5.2.1,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "celery (>=5.5.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "img_server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
